--- a/Master.tex
+++ b/Master.tex
@@ -268,6 +268,8 @@ What the thesis provides is algorithms, mathematical formulas/models for learnin
 \chapter{Conditional learning with hypergraphs}\label{sec:app:hypergraph}
     \subfile{Appendices/Hypergraph}
     %By conditional actions we mean actions that include effects that sometime occur dependent on the state the action is applied in.
+\chapter{Complete optimistic learning example of vacuum world}\label{sec:app:vacuum-full}
+	\subfile{Appendices/VacuumWorldOptimistic}
 \chapter{Results}\label{sec:app:results}
     \subfile{Appendices/Results}
 %-----------
